--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0"
   }
